--- a/src/style/LoginPage.css
+++ b/src/style/LoginPage.css
@@ -1,6 +1,6 @@
 .title {
     color: #838383;
-    font-size: 32px;
+    font-size: 25px;
     font-weight: bold;
 }
 .inputform {
@@ -10,23 +10,29 @@
 .text {
     width: 100px;
     text-align: right;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     margin-right: 10px;
     margin-top: 10px;
     justify-content: center;
     padding-left: 30%;
 }
+.under_text{
+    text-decoration: underline;
+    cursor: pointer;
+}
 .input {
     justify-content: center;
 }
+.button-div > Button{
+    width: 10vw;
+    justify-content: center;
+}
 .button-container {
-    margin-top: 5%;
+    margin-top: 5vh;
     display: flex;
+    flex-direction: column;
     padding-left: 30%;
     padding-right: 30%;
-}
-.button-container .button {
-    margin: auto;
     justify-content: center;
 }
